# piicodev-rs

./: .gitignore  .gitmodules  .markdownlint.yaml  Cargo.toml  LICENSE.txt  README.md  clippy.toml  deny.toml  package-lock.json  package.json  script.sh
.cargo/: config.toml
.github/workflows/: ci_checks.yml
examples/: p1.rs  p10_pico.rs  p11.rs  p12.rs  p13.rs  p14.rs  p15.rs  p16.rs  p18.rs  p19.rs  p2.rs  p21.rs  p22.rs  p23.rs  p26.rs  p27_pico.rs  p29_pico.rs  p3.rs  p30.rs  p30_read_when_available.rs  p30_simple_read.rs  p7.rs
mp/: Cargo.toml
mp/src/: lib.rs
p1/: Cargo.toml  README.md
p1/examples/: p1.rs  p1_pico.rs
p1/src/: lib.rs
p10/: Cargo.toml  README.md
p10/examples/: p10_pico.rs
p10/src/: lib.rs
p11/: Cargo.toml  README.md
p11/examples/: p11.rs  p11_pico.rs
p11/src/: lib.rs
p12/: Cargo.toml  README.md
p12/examples/: p12.rs  p12_pico.rs
p12/src/: lib.rs
p13/: Cargo.toml  README.md
p13/examples/: p13.rs  p13_pico.rs
p13/src/: lib.rs
p14/: Cargo.toml  README.md
p14/examples/: p14.rs  p14_pico.rs
p14/src/: lib.rs
p15/: Cargo.toml  README.md
p15/examples/: p15.rs  p15_pico.rs
p15/src/: lib.rs
p16/: Cargo.toml  README.md
p16/examples/: p16.rs
p16/src/: lib.rs
p18/: Cargo.toml  README.md
p18/examples/: p18.rs  p18_pico.rs
p18/src/: lib.rs
p19/: Cargo.toml  README.md
p19/examples/: p19.rs  p19_pico.rs
p19/src/: lib.rs
p2/: Cargo.toml  README.md
p2/examples/: p2.rs
p2/src/: lib.rs
p21/: Cargo.toml  README.md
p21/examples/: p21.rs  p21_pico.rs
p21/src/: lib.rs
p22/: Cargo.toml  README.md
p22/examples/: p22.rs  p22_pico.rs
p22/src/: lib.rs
p23/: Cargo.toml  README.md
p23/examples/: p23.rs
p23/src/: lib.rs
p26/: Cargo.toml  README.md
p26/examples/: p26.rs  p26_pico.rs
p26/src/: lib.rs
p27/: Cargo.toml  README.md
p27/examples/: p27_pico.rs
p27/src/: lib.rs
p29/: Cargo.toml  README.md
p29/examples/: p29_pico.rs
p29/src/: lib.rs
p3/: Cargo.toml  README.md
p3/examples/: p3.rs  p3_pico.rs
p3/src/: lib.rs
p30/: Cargo.toml  README.md
p30/examples/: p30.rs  p30_pico.rs
p30/src/: lib.rs
p7/: Cargo.toml  README.md
p7/examples/: p7.rs  p7_pico.rs
p7/src/: lib.rs
src/: lib.rs  p1.rs  p10.rs  p11.rs  p12.rs  p13.rs  p14.rs  p15.rs  p16.rs  p18.rs  p19.rs  p2.rs  p21.rs  p22.rs  p23.rs  p26.rs  p27.rs  p29.rs  p3.rs  p30.rs  p7.rs
src/p1/: mod.rs  whoami.rs
src/p12/: mod.rs
src/p13/: atmel.rs  mod.rs  whoami.rs
src/p14/: mod.rs
src/p15/: mod.rs
src/p16/: mod.rs
src/p18/: atmel.rs  whoami.rs
src/p19/: mod.rs  whoami.rs
src/p2/: mod.rs  whoami.rs
src/p21/: atmel.rs  mod.rs  whoami.rs
src/p22/: atmel.rs  whoami.rs
src/p23/: mod.rs  whoami.rs
src/p26/: mod.rs  whoami.rs
src/p27/: atmel.rs  mod.rs  whoami.rs
src/p29/: mod.rs
src/p3/: mod.rs
src/p30/: atmel.rs  helper.rs  mod.rs  whoami.rs
src/p7/: mod.rs
tests/: p1.rs  p3.rs  p30_read_when_available.rs  p30_simple_read.rs  p7.rs  support.rs
xtask/: Cargo.toml
xtask/src/: main.rs
