[package]
name = "unofficial-piicodev"
version = "0.1.0"
description = "d"
keywords = ["Driver", "PiicoDev", "i2c"]
authors = [
  "Tommy Gilligan <thomas.gilligan@icloud.com>",
]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tommy-gilligan/piicodev-rs/"

[dependencies]
embedded-graphics = ">=0.7.1"
embedded-hal = { version = "=1.0.0-rc.1" }
fugit = ">=0.3.6"
# mfrc522 = { version="0.6.0", features=["eh1"] }
libm = ">=0.2.6"
palette = { version = ">= 0.7.1", default-features = false, features = ["libm"] }
smart-leds-trait = ">=0.2.1"
fixed = ">=1.23.1"
num_enum = { version = ">= 0.6.1", default-features = false }
cast = { version = ">=0.3.0", default-features = false }

[features]
default = [ "acceptance" ]
acceptance = ["mp"]

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
mp = { path = "mp", optional = true }

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
embedded-hal-mock = { git = "https://github.com/newAM/embedded-hal-mock.git", branch = "eh1-rc.1", features = ["eh1"] }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
cortex-m = ">=0.7"
cortex-m-rt = ">=0.7"
defmt = ">= 0.3.2"
defmt-rtt = ">=0.4"
fugit = ">=0.3.6"
panic-probe = { version = ">=0.3", features = ["print-defmt"] }
rp2040-boot2 = { version = ">= 0.3" }
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal.git", features = ["eh1_0_alpha", "critical-section-impl"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[workspace]
members = ["xtask", "mp"]
