[package]
name = "p10"
version = "0.1.0"
description = "d"
keywords = ["button"]
authors = [
  "Thomas Gilligan <thomas.gilligan@icloud.com>",
]
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
git-references = [
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-Colour-Sensor-VEML6040.git", sha = "2c2986eafe057aebe93e84157f217c598efd60cf" },
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-VEML6040-MicroPython-Module.git", sha = "8cb4fc8c2534a9b67a9cae50527892cd902c4b45" }
]

[dependencies]
embedded-hal.workspace = true
palette = { version = "0.7.1", default-features = false, features = ["libm"] }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
fugit.workspace = true
rp-pico.workspace = true

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
embedded-hal-mock.workspace = true
