[package]
name = "p12"
version = "0.1.0"
description = "d"
keywords = ["button"]
authors = [
  "Thomas Gilligan <thomas.gilligan@icloud.com>",
]
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
git-references = [
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-Capacitive-Touch-Sensor-CAP1203.git", sha = "1178346d1c3d1f11ed98f5183aa7f7c944a775a6" },
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-CAP1203-MicroPython-Module.git", sha = "f2a061b83e020ef96865ba97215793c02717747e" }
]

[dependencies]
embedded-hal.workspace = true

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
fugit.workspace = true
rp-pico.workspace = true

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
embedded-hal-mock.workspace = true
