[package]
name = "p14"
version = "0.1.0"
description = "d"
keywords = ["button"]
authors = [
  "Thomas Gilligan <thomas.gilligan@icloud.com>",
]
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
git-references = [
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-OLED-SSD1306.git", sha = "9589dfa21c6f25eb7eae1e51cee97ff6fd2c235f" },
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-SSD1306-MicroPython-Module.git", sha = "eba37787ef6630fc93784da8dc7a999cfa4f1d0b" }
]

[dependencies]
embedded-hal.workspace = true
embedded-graphics = "0.7.1"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
fugit.workspace = true
rp-pico.workspace = true

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
embedded-hal-mock.workspace = true
