[package]
name = "p16"
version = "0.1.0"
description = "d"
keywords = ["MFRC522", "RFID", "NFC", "PiicoDev"]
authors = [
  "Thomas Gilligan <thomas.gilligan@icloud.com>",
]
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
embedded-hal.workspace = true
mfrc522 = { git="https://gitlab.com/tomgilligan/rfid-rs.git", features=["eh1"], branch="communication_refactor" }


[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
fugit.workspace = true
rp-pico.workspace = true

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
embedded-hal-mock.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal.workspace = true
