[package]
name = "p21"
version = "0.1.0"
description = "d"
keywords = ["button"]
authors = [
  "Thomas Gilligan <thomas.gilligan@icloud.com>",
]
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
git-references = [
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-Button.git", sha = "53c87f9c908d31c1385dfc4f9f4e1d9773aa05ae" },
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-Switch-MicroPython-Module.git", sha = "3bfbfa1ed58438afb9d7cb3032e24de1dc9742e7" }
]

[dependencies]
embedded-hal.workspace = true

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
fugit.workspace = true
rp-pico.workspace = true

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
embedded-hal-mock.workspace = true
