[package]
name = "p27"
version = "0.1.0"
description = "d"
keywords = ["button"]
authors = [
  "Thomas Gilligan <thomas.gilligan@icloud.com>",
]
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
git-references = [
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-Transceiver-915-MHz.git", sha = "b7b5da00014e3c9bc98617ebd7cdf4babc00639b" },
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-Transceiver-MicroPython-Module.git", sha = "2c3e4423b86cfcb372a998f5bbc74319162b9a85" }
]

[dependencies]
embedded-hal.workspace = true

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
fugit.workspace = true
rp-pico.workspace = true

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
embedded-hal-mock.workspace = true
