[package]
name = "p3"
version = "0.1.0"
description = "d"
keywords = ["button"]
authors = [
  "Thomas Gilligan <thomas.gilligan@icloud.com>",
]
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
git-references = [
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-Ambient-Light-Sensor-VEML6030.git", sha = "2c46d51e90e8e83d5c3dfa3b6a614adb75469b6c" },
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-VEML6030-MicroPython-Module.git", sha = "14b19d9dffe959efd90a55e7a37e663788ab53ff" }
]

[dependencies]
embedded-hal.workspace = true
measurements.workspace = true

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
fugit.workspace = true
rp-pico.workspace = true

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
embedded-hal-mock.workspace = true
