[package]
name = "p30"
version = "0.1.0"
description = "d"
keywords = ["button"]
authors = [
  "Thomas Gilligan <thomas.gilligan@icloud.com>",
]
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
git-references = [
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-Ultrasonic-Rangefinder.git", sha = "3e006745fdc5123f8bc55bbcfde54461db72883c" },
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-Ultrasonic-Rangefinder-MicroPython-Module.git", sha = "6f5f4a65f41b29be7fd7c041cde15104fed2f31c" }
]

[dependencies]
embedded-hal.workspace = true
measurements.workspace = true

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
fugit.workspace = true
rp-pico.workspace = true

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
embedded-hal-mock.workspace = true
