[package]
name = "p30"
version = "0.1.0"
description = "Unofficial Rust Driver for PiicoDev Ultrasonic Rangefinder"
keywords = ["Ultrasonic", "Rangefinder", "PiicoDev", "RCWL-1601", "HC-SR04"]
authors = [
  "Thomas Gilligan <thomas.gilligan@icloud.com>",
]
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
embedded-hal.workspace = true
measurements.workspace = true

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
fugit.workspace = true
rp-pico.workspace = true

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
embedded-hal-mock.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal.workspace = true
