[package]
name = "p7"
version = "0.1.0"
description = "d"
keywords = ["button"]
authors = [
  "Thomas Gilligan <thomas.gilligan@icloud.com>",
]
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
git-references = [
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-Precision-Temperature-Sensor-TMP117.git", sha = "426af09299dc6ae9f254da7f45ef615f65c0f207" },
    { url = "https://github.com/CoreElectronics/CE-PiicoDev-TMP117-MicroPython-Module.git", sha = "2678a75ac4efbc8c9a16ceb55335108b04460996" }
]

[dependencies]
embedded-hal.workspace = true
measurements.workspace = true

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
fugit.workspace = true
rp-pico.workspace = true

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
embedded-hal-mock.workspace = true
