[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
markdown = "1.0.0-alpha.8"
cargo_metadata = "0.15.4"
camino = "1.1.4"
clap = { version = "4.2.4", features = ["cargo"] }
glob = "0.3.1"
tl = { version = "0.7.7" }
http = "0.2.9"
reqwest = { version = "0.11", features = ["json", "blocking", "gzip", "deflate", "brotli", "cookies"] }
tokio = { version = "1", features = ["full"] }
